# quickfix-hs

./: .gitignore  AlphaHeavy-FIX-FIX42-Factory.html  AlphaHeavy-FIX-FIX42-Types.html  AlphaHeavy-FIX.html  AlphaHeavy-QuickFIX.html  GenerateFIX.hs  LICENSE  README.md  alphaheavy-quickfix.cabal  alphaheavy-quickfix.haddock  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_AlphaHeavy-FIX-FIX42-Factory.html  mini_AlphaHeavy-FIX-FIX42-Types.html  mini_AlphaHeavy-FIX.html  mini_AlphaHeavy-QuickFIX.html
.github/workflows/: ci.yml
cbits/: QuickFIXThunks.cpp  QuickFIXThunks.h
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/tmp/src-3399/assoc-1.1.1/: CHANGELOG.md
dist-newstyle/tmp/src-3399/assoc-1.1.1/src/Data/Bifunctor/: Assoc.hs  Swap.hs
dist-newstyle/tmp/src-3402/hashable-1.5.0.0/xxHash-0.8.2/: xxhash.h
spec/: IB.xml
src/AlphaHeavy/: FIX.hs  QuickFIX.hs
src/AlphaHeavy/FIX/FIX42/: Factory.hs  Types.hs
src/AlphaHeavy/QuickFIX/: Foreign.hs  GReceive.hs  GSend.hs  GetMessageField.hs  SetMessageField.hs  Types.hs
