Name:                alphaheavy-quickfix
Version:             0.1
License:             BSD3
License-File:        LICENSE
Build-type:          Simple

Cabal-version:       >= 1.10

Library
  Default-Language:  Haskell2010
  Build-depends:     base >= 4.7,
                     bytestring >= 0.9,
                     conduit > 1.0,
                     containers,
                     Decimal,
                     mtl,
                     old-locale,
                     lens,
                     resourcet,
                     stm,
                     time

  Exposed-modules:   AlphaHeavy.FIX
                     AlphaHeavy.FIX.FIX42.Factory
                     AlphaHeavy.FIX.FIX42.Types
                     AlphaHeavy.QuickFIX

  Other-modules:     AlphaHeavy.QuickFIX.Foreign
                     AlphaHeavy.QuickFIX.GReceive
                     AlphaHeavy.QuickFIX.GSend
                     AlphaHeavy.QuickFIX.GetMessageField
                     AlphaHeavy.QuickFIX.SetMessageField
                     AlphaHeavy.QuickFIX.Types

  HS-Source-Dirs:    src

  GHC-Options:       -Wall -optcxx-std=c++11
  CC-Options:        -O2 -ggdb

  C-Sources:         cbits/QuickFIXThunks.cpp

  Includes:          quickfix/index.h
  Extra-Libraries:   quickfix, stdc++
